tr7193 python upgrade modifications

--- a/Install
+++ b/Install
@@ -143,7 +143,7 @@ chgrp www www
 #  is prohibited without the prior express written permission of the Jackson 
 #  Laboratory.
 # 
-# Copyright © 1996, 1999, 2002 by The Jackson Laboratory
+# Copyright (c) 1996, 1999, 2002 by The Jackson Laboratory
 # All Rights Reserved
 #
 
