tr7193 trunk merge

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: wksilvers-3-4-2-1
+DATE: 1/11/2006
+STAFF: pf
+RELEASE: alpha
+CHANGES: tr7193 trunk merge
+
 TAG: wksilvers-tr7193-BP
 DATE: 12/28/2005
 STAFF: pf
