--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: wksilvers-3-5-0-1
+DATE: 8/15/2006
+STAFF: pf
+RELEASE: Not coupled to a release
+CHANGES: tr7812
+
 TAG: wksilvers-3-4-2-2
 DATE: 1/13/2006
 STAFF: jsb
