New tag for wksilvers.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: wksilvers-4-0-0-x (4)
+DATE 2/12/08
+STAFF: mhall
+RELEASE: MGI 4.0 updates
+
 TAG: wksilvers-4-0-0-x (1,2,3)
 DATE 2/11/08
 STAFF: pf
