New tag: wksilvers-tr9440-4

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: wksilvers-tr9440-4
+DATE 3/19/09
+STAFF: mhall
+CHANGES:
+1) Missing thumbnails, so a new tag.
+
 TAG: wksilvers-tr9440-3
 DATE 3/13/09
 STAFF: mhall
