Changes due to missing thumbnails.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: wksilvers-4-2-1-2
+DATE 3/19/09
+STAFF: mhall
+CHANGES:
+1) New tag due to missing thumbnails.
+
 TAG: wksilvers-4-2-1-1
 DATE 3/16/09
 STAFF: mhall
