--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: wksilvers-5-0-0-1
+DATE: 2/15/2012
+STAFF:pf
+CHANGES: sybase to postgres
+
 TAG: wksilvers-4-2-1-2
 DATE 3/19/09
 STAFF: mhall
