--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: wksilvers-5-0-0-3
+DATE: 03/28/2012
+STAFF: marka
+CHANGES: 5.0 beta build
+
 TAG: wksilvers-5-0-0-2
 DATE: 2/15/2012
 STAFF:pf
