--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: wksilvers-6-0-3-1
+DATE: 04/06/2016
+STAFF: kstone
+CHANGES: updated broken allele report links
+
+
 TAG: wksilvers-5-0-0-3
 DATE: 03/28/2012
 STAFF: marka
