adding MGICONFIG to Install script

--- a/Install
+++ b/Install
@@ -1,5 +1,17 @@
 #!/bin/sh
 
+#
+#  If the MGICONFIG environment variable does not have a local override,
+#  use the default "live" settings.
+#
+if [ "${MGICONFIG}" = "" ]
+then
+    MGICONFIG=/usr/local/mgi/live/mgiconfig
+    export MGICONFIG
+fi
+
+. ${MGICONFIG}/master.config.sh
+
 #####################################################################
 ###  Variable definitions (edit as needed)
 
