--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: wksilvers-6-0-5-1
+DATE: 9/28/2016
+STAFF: dbm
+CHANGES: converted from cvs to git
+
 TAG: wksilvers-6-0-4-1
 DATE:6/23/16
 STAFF: pf
